// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterNetwork should hide view all 1`] = `
<div>
  <div>
    <ul
      class="inline-block"
      data-testid="network__option"
    >
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--0"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--1"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
          >
            <div
              class="sc-AxjAm HWmvM"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--2"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            <span />
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FilterNetwork should render 1`] = `
<div>
  <div>
    <ul
      class="inline-block"
      data-testid="network__option"
    />
    <div
      class="sc-AxiKw hpQrmn relative cursor-pointer border-theme-primary-contrast"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-500"
      >
        All
      </div>
      <span
        class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
      >
        <div
          class="sc-AxjAm iepfoc"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
  </div>
</div>
`;

exports[`FilterNetwork should render with icon 1`] = `
<div>
  <div>
    <ul
      class="inline-block"
      data-testid="network__option"
    >
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--0"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--1"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
          >
            <div
              class="sc-AxjAm HWmvM"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="network__option--2"
      >
        <div
          class="sc-AxiKw hpQrmn relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
        >
          <div
            class="sc-AxjAm buCJuk"
            height="20"
            width="20"
          />
          <span
            class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            <span />
          </span>
        </div>
      </li>
    </ul>
    <div
      class="sc-AxiKw hpQrmn relative cursor-pointer border-theme-primary-contrast"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-500"
      >
        All
      </div>
      <span
        class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
      >
        <div
          class="sc-AxjAm iepfoc"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
  </div>
</div>
`;
